Menambah penjelasan pemilihan fitur dan analisis pengaruh tidak ditemukan korelasi

--- a/config/istilah.tex
+++ b/config/istilah.tex
@@ -80,6 +80,7 @@
 \newcommand{\Retriever}[1]{\textit{Retriever}}
 \newcommand{\Cutoff}[1]{\textit{Cut-off}}
 \newcommand{\Dataset}[1]{\textit{Dataset}}
+\newcommand{\Feature}[1]{\textit{Feature}}
 
 %% Singkatan Stuff
 \newcommand{\ranknet}[1]{RankNet}
