--- a/src/01-body/bab5.tex
+++ b/src/01-body/bab5.tex
@@ -190,16 +190,16 @@ Setelah diketahui bahwa penambahan \reranker{} berbasis fitur dengan seluruh fit
 \begin{figure}[!ht]
     \centering
     \includegraphics[scale=0.725]{assets/pdfs/Feature Importance Distribution Log.pdf}
-    \caption{\feature{} \importance{} secara umum. Perhatikan bahwa sumbu-x merupakan nilai \feature{} \importance{} dalam skala logaritmik, Sementara itu, sumbu-y merupakan daftar nama fitur yang diusulkan terurut secara menurun dari yang paling penting.}
+    \caption{\Feature{} \importance{} ($fi$) secara umum, hasil agregasi kelima model dari seluruh \textit{fold}. Perhatikan bahwa sumbu-x merupakan nilai $fi$ dalam skala logaritmik dengan batang berwarna toska merupakan \textit{mean} $fi$ dan garis merah menunjukkan batas atas dan bawah distribusi $fi$ yang didapat dengan \textit{confidence interval} $95\%$. Sementara itu, sumbu-y merupakan daftar nama fitur yang diusulkan terurut secara menurun dari batas bawah distribusi terbesar atau yang diasumsikan paling konsisten.}
     \label{grafik:Feature Importance All}
 \end{figure}
-Perlu diketahui bahwa nilai dari \feature{} \importance{} $fi$ yang diperoleh berada dalam interval tertutup $fi\in[0,1]$ dengan nilai $fi=1$ berarti bahwa model hanya menggunakan satu fitur tersebut untuk melakukan seluruh \textit{split}, sedangkan $fi=0$ berarti bahwa fitur tersebut tidak digunakan dalam membuat \textit{split} sama sekali. Namun, sebelum divisualisasikan, karena nilai $fi$ yang diperoleh sangat \textit{skew} sehingga dinormalisasi terlebih dahulu dengan menggunakan $\log(fi \times 100)$. Perhatikan bahwa, karena nilai $fi$ masuk dalam interval tertutup $[0,1]$, maka hasil normalisasi menggunakan fungsi $\log$ akan membuat grafik semakin \textit{skew}, sehingga ditetapkan konstanta pengali $100$ untuk merubah nilai menjadi interval $[0,100]$.
+Perlu diketahui bahwa nilai dari \feature{} \importance{} $fi$ yang diperoleh berada dalam interval tertutup $fi\in[0,1]$ dengan nilai $fi=1$ berarti bahwa model hanya menggunakan satu fitur tersebut untuk melakukan seluruh \textit{split}, sedangkan $fi=0$ berarti bahwa fitur tersebut sama sekali tidak digunakan dalam pembuatan \textit{split}. Namun, sebelum divisualisasikan, karena nilai $fi$ yang diperoleh  sangat \textit{skew} maka dilakukan normalisasi terlebih dahulu dengan menggunakan fungsi logaritma. Perhatikan bahwa, karena nilai $fi$ masuk dalam interval tertutup $[0,1]$, maka hasil normalisasi menggunakan fungsi logaritma akan membuat grafik semakin \textit{skew}. Untuk mencegah hal tersebut, ditetapkan konstanta pengali $100$ untuk merubah interval tersebut menjadi interval tertutup $[0,100]$ dan konstanta penambah 1 untuk memungkinkan pemetaan bilangan riil tidak negatif. Oleh karena itu, fungsi normalisasi nilai $fi$ yang digunakan untuk visualisasi tersebut dapat dirumuskan sebagai $\log(fi \times 100+1)$.
 
-Berdasarkan hasil yang didapat, ditemukan bahwa, secara rata-rata, lima fitur yang paling bermanfaat secara terurut dari yang paling penting adalah \obm{}, LEMURTF\_IDF, DLH, HIEMSTRA\_LM, dan JACCARD\_SCORE. Namun, dari kelima fitur tersebut, dua diantaranya memiliki standar deviasi tinggi, yaitu DLH dan HIEMSTRA\_LM, hal tersebut mencerminkan bahwa dari semua model \lambdamart{} yang dilatih, kedua fitur tersebut tidak konsisten menjadi fitur yang paling penting. Sementara itu, fitur-fitur seperti \obm{}, LEMURTF\_IDF, dan JACCARD\_SCORE menunjukkan hasil yang lebih konsisten dari seluruh model yang dilatih.
+Berdasarkan hasil yang didapat, ditemukan bahwa, secara rata-rata, lima fitur yang paling bermanfaat secara terurut dari yang paling penting adalah \obm{}, LEMURTF\_IDF, DLH, HIEMSTRA\_LM, dan JACCARD\_SCORE. Namun, dari kelima fitur tersebut, dua diantaranya memiliki standar deviasi tinggi, yaitu DLH dan HIEMSTRA\_LM, hal tersebut mencerminkan bahwa dari semua model \lambdamart{} yang dilatih, kedua fitur tersebut tidak konsisten menjadi fitur yang paling penting. Sementara itu, fitur-fitur seperti \obm{}, LEMURTF\_IDF, dan JACCARD\_SCORE menunjukkan hasil yang lebih konsisten, memiliki nilai tertinggi untuk batas bawah distribusi dengan \textit{confidence level} $95\%$, pada semua model yang dilatih.
 
-Kemudian, seperti yang telah diusulkan pada \subbab{}~\ref{subbab:3:Usulan Fitur}, digunakan juga fitur-fitur yang memanfaatkan keluaran \encoder{}. Untuk metode pemanfaatan vektor \encoder{} \bert{}, ditemukan bahwa CONCAT\_LFHS\_CLS, sama dengan temuan \citet{devlin2018bert}, merupakan fitur yang paling efektif dalam melakukan klasifikasi menurut nilai \importance{}-nya yang relatif lebih tinggi dibanding metode pemanfaatan vektor \bert{} lainnya. Selain itu, untuk metode pengambilan lainnya, ditemukan bahwa urutan nilai \importance{} yang didapat sama dengan urutan efektivitas temuan \citet{devlin2018bert}, dengan pengecualian LHS\_CLS. Hasil eksperimen menunjukkan bahwa LHS\_CLS merupakan fitur kedua yang paling efektif diantara metode pengambilan vektor \bert{} lainnya, bertentangan dengan \citet{devlin2018bert} yang mendapatkan LHS\_CLS sebagai metode terburuk kedua. Sementara itu, untuk metode pemanfaatan \encoder{} \tfive{} didapatkan bahwa hasil eksperimen sesuai dengan temuan \citet{ni2021sentence} dengan LHS\_MEAN sebagai fitur paling efektif. Dari semua metode pengambilan vektor yang diuji, didapat bahwa penggunaan rata-rata dari vektor \hs{} \tfive{} merupakan yang paling efektif, namun nilai \importance{}-nya masih kalah dengan algoritma sederhana seperti JACCARD\_SCORE.
+Kemudian, seperti yang telah diusulkan pada \subbab{}~\ref{subbab:3:Usulan Fitur}, digunakan juga fitur-fitur yang memanfaatkan keluaran \encoder{}. Untuk metode pemanfaatan vektor \encoder{} \bert{}, ditemukan bahwa CONCAT\_LFHS\_CLS, sama dengan temuan \citet{devlin2018bert}, merupakan fitur yang paling efektif dalam melakukan klasifikasi menurut rata-rata nilai \importance{}-nya yang relatif lebih tinggi dibanding metode pemanfaatan vektor \bert{} lainnya. Selain itu, untuk metode pengambilan lainnya, ditemukan bahwa urutan nilai \importance{} yang didapat sama dengan urutan efektivitas temuan \citet{devlin2018bert}, dengan pengecualian LHS\_CLS. Hasil eksperimen menunjukkan bahwa LHS\_CLS merupakan fitur kedua yang paling efektif diantara metode pengambilan vektor \bert{} lainnya, bertentangan dengan \citet{devlin2018bert} yang mendapatkan LHS\_CLS sebagai metode terburuk kedua. Sementara itu, untuk metode pemanfaatan \encoder{} \tfive{} didapatkan bahwa hasil eksperimen sesuai dengan temuan \citet{ni2021sentence} dengan LHS\_MEAN sebagai fitur paling efektif. Dari semua metode pengambilan vektor yang diuji, didapat bahwa penggunaan LHS\_MEAN \encoder{} \tfive{} merupakan yang paling efektif, namun nilai \importance{}-nya masih lebih rendah dibandingkan algoritma pencocokan seperti JACCARD\_SCORE.
 
-Berdasarkan hasil analisis \feature{} \importance{} tersebut, dilakukan pengujian efektivitas menggunakan data \testing{}. Dibentuk sistem yang sama dengan perbedaan pada jumlah fitur yang diekstraksi, yaitu dengan hanya mengekstraksi fitur nilai relevansi \obm{}, nilai relevansi LemurTF\_IDF, dan nilai kesamaan jaccard. Hasil percobaan tersebut diberikan pada \tabel{}~\ref{tabel:hasil test 3 fitur}. Menurut hasil percobaan, didapatkan bahwa, untuk metrik tolok ukur utama \recall{}$@3$, kinerja sistem relatif naik dengan penambahan proses \reranking{} menggunakan ketiga fitur tersebut. Selain metrik \recall{}$@3$, ditemukan peningkatan pada metrik \precision{}$@3$ yang mengindikasikan bahwa \reranking{} yang dilakukan dapat meningkatkan kualitas tiga dokumen teratas secara efektif.
+Berdasarkan hasil analisis \feature{} \importance{} tersebut, dilakukan pengujian efektivitas menggunakan data \testing{}. Dibentuk sistem yang sama dengan perbedaan pada jumlah fitur yang diekstraksi, yaitu dengan hanya mengekstraksi tiga fitur yang memiliki nilai $fi$ paling konsisten, antara lain nilai relevansi \obm{}, nilai relevansi LemurTF\_IDF, dan nilai kesamaan jaccard. Hasil percobaan tersebut diberikan pada \tabel{}~\ref{tabel:hasil test 3 fitur}. Menurut hasil percobaan, didapatkan bahwa, untuk metrik tolok ukur utama \recall{}$@3$, kinerja sistem relatif naik dengan penambahan proses \reranking{} menggunakan ketiga fitur tersebut. Selain metrik \recall{}$@3$, ditemukan juga peningkatan pada metrik \precision{}$@3$ yang mengindikasikan bahwa \reranking{} yang dilakukan dapat meningkatkan kualitas tiga dokumen teratas secara efektif.
 \begin{table}[H]
     \centering
     \caption{Hasil eksperimen pada data \testing{} menggunakan \reranker{} dengan masukan nilai relevansi \obm{} dan LemurTF\_IDF, serta JACCARD\_SCORE yang diurutkan berdasarkan metrik \recall{}@3}
@@ -224,7 +224,7 @@ Berdasarkan hasil analisis \feature{} \importance{} tersebut, dilakukan pengujia
     }
 \end{table}
 
-Namun, kasus yang sama tidak bisa digeneralisasikan untuk metrik lainnya, seperti yang didapatkan bahwa terjadi penurunan kinerja sistem menurut beberapa metrik. Perubahan nilai metrik diberikan dalam \tabel{}~\ref{tabel:hasil test persentase kenaikan}. Perhatikan bahwa, walaupun didapatkan peningkatan pada \recall{}$@3$, terdapat penurunan nilai metrik untuk \recall{}$@5$ atau \recall{}$@10$. Hal tersebut menunjukkan bahwa secara rata-rata penambahan \reranker{} dengan tiga fitur tersebut dapat meningkatkan kemampuan sistem untuk mengidentifikasi dokumen relevan pada tiga hasil teratas. Tetapi, selain tiga hasil teratas, relevansi yang didapatkan kurang lebih sama atau bahkan menurun, yang berarti sistem tidak efektif dalam mempertahankan relevansi untuk cakupan yang lebih luas.
+Namun, kasus yang sama tidak bisa digeneralisasikan untuk metrik lainnya, seperti yang didapatkan bahwa terjadi penurunan kinerja sistem menurut beberapa metrik. Perubahan nilai metrik diberikan dalam \tabel{}~\ref{tabel:hasil test persentase kenaikan}. Perhatikan bahwa, walaupun didapatkan peningkatan pada \recall{}$@3$, terdapat beberapa penurunan nilai metrik untuk \recall{}$@5$ atau \recall{}$@10$. Hal tersebut menunjukkan bahwa, secara rata-rata, penambahan \reranker{} dengan tiga fitur tersebut dapat meningkatkan kemampuan sistem untuk mengidentifikasi dokumen relevan pada tiga hasil teratas. Tetapi, selain tiga hasil teratas, relevansi yang didapatkan kurang lebih sama atau bahkan menurun, yang berarti sistem tidak efektif dalam mempertahankan relevansi untuk cakupan yang lebih luas. Hal yang serupa dapat ditemukan pada metrik \precision{} dengan kenaikan pada \precision{}$@3$ dan beberapa penurunan atau stagnasi pada \precision{}$@5$ maupun \precision{}$@10$.
 
 \begin{table}[H]
     \centering
@@ -276,15 +276,26 @@ Sama seperti analisis sebelumnya, dilakukan perhitungan \textit{t-test} untuk me
 %-----------------------------------------------------------------------------%
 \subsection{Hasil Pengaruh \Cutoff{}}
 \label{subbab:5::Hasil Pengaruh Cut-off}
-Pada \gambar{}~\ref{grafik:cutoff} diberikan hasil eksperimen untuk metrik \recall{} pada \cutoff{} 3. Namun, grafik tersebut kurang dapat menunjukkan korelasi antara \cutoff{} dengan efektivitas. Dapat dilihat bahwa sistem DLH13 (Reranker) memiliki hasil yang paling baik pada \cutoff{} 85, sedangkan efektivitas kedua terbaik didapatkan oleh sistem TF\_IDF pada \cutoff{} 150. Oleh karena itu, berdasarkan hasil eksperimen, kurang adanya bukti yang dapat mendukung hipotesis awal peneliti, yaitu terdapat korelasi positif antara nilai \cutoff{} dengan kinerja sistem.
+Perlu diingat bahwa, dalam penelitian ini, performa sistem akan diukur menggunakan metrik \recall{}$@3$. \gambar{}~\ref{grafik:cutoff} memvisualisasikan performa sistem pada beberapa nilai \cutoff{}. Dapat dilihat bahwa sistem DLH13 (Reranker) memiliki hasil yang paling baik pada \cutoff{} 85, sedangkan efektivitas kedua terbaik didapatkan oleh sistem TF\_IDF pada \cutoff{} 150. Oleh karena itu, berdasarkan pengamatan nilai terbaik, kurang adanya bukti yang dapat mendukung hipotesis awal peneliti, yaitu terdapat korelasi positif antara nilai \cutoff{} dengan kinerja sistem.
+
 \begin{landscape}
     \begin{figure}
         \centering
         \includegraphics[scale=0.6]{assets/pdfs/Cut Off Experiment Results_3.pdf}
-        \caption{Kinerja pada beberapa \cutoff{}. Perhatikan bahwa tidak didapatkannya korelasi yang kuat dengan nilai \textit{pearson} sebagai berikut: BM25 (Reranker) -0.2363; DFR\_BM25 (Reranker) -0.0904; DLH13 (Reranker) 0.1239; InL2 (Reranker) 0.0277; dan TF\_IDF (Reranker) 0.046. Hasil tersebut menunjukkan bahwa BM25 (Reranker) memiliki korelasi negatif yang sangat lemah dan DFR\_BM25 (Reranker) memiliki korelasi negatif yang lemah, serta DLH13 (Reranker), InL2 (Reranker), dan TF\_IDF (Reranker) memiliki korelasi positif yang lemah. Oleh karena itu, kurang adanya bukti yang mendukung hipotesis bahwa terdapat korelasi positif antara nilai \cutoff{} dengan kinerja sistem.}
+        \caption{Kinerja pada beberapa \cutoff{}. Perhatikan bahwa tidak didapatkannya korelasi yang kuat dengan nilai \textit{pearson} sebagai berikut: BM25 (Reranker) -0.2363; DFR\_BM25 (Reranker) -0.0904; DLH13 (Reranker) 0.1239; InL2 (Reranker) 0.0277; dan TF\_IDF (Reranker) 0.046. Hasil tersebut menunjukkan bahwa BM25 (Reranker) memiliki korelasi negatif yang sangat lemah dan DFR\_BM25 (Reranker) memiliki korelasi negatif yang lemah, serta DLH13 (Reranker), InL2 (Reranker), dan TF\_IDF (Reranker) memiliki korelasi positif yang lemah.}
         \label{grafik:cutoff}
     \end{figure}
 \end{landscape}
+
+Selain dari itu, grafik tersebut kurang dapat menunjukkan korelasi antara \cutoff{} dengan efektivitas, sehingga, untuk menyelidiki hubungan tersebut, dilakukan perhitungan korelasi \textit{pearson} yang hasilnya dapat dilihat pada \gambar{}~\ref{grafik:cutoff}. Menurut hasil perhitungan tersebut, nilai mutlak tertinggi diperoleh BM25 (Reranker), senilai $0.2363$, yang tergolong tingkat korelasi lemah. Golongan korelasi itu juga merupakan korelasi negatif yang juga bertentangan dengan hipotesis awal peneliti, yaitu adanya korelasi positif.
+
+Selanjutnya, dilakukan analisis distribusi \ranking{} dari dokumen relevan karena peneliti menduga bahwa model \lambdamart{} kurang efektif dalam memperbaiki \ranking{} untuk posisi yang rendah. Untuk itu, dilakukan perbandingan distribusi sebelum dan setelah proses \reranking{} yang hasilnya divisualisasikan pada \gambar{}~\ref{grafik:dist rank}. Perlu diketahui bahwa grafik tersebut merupakan hasil \textit{Kernel Density Estimation} (KDE) yang digunakan untuk menghasilkan suatu kurva kontinu dari himpunan data diskret. Dalam kasus ini, data diskret tersebut merupakan nilai peringkat atau \textit{rank} yang memiliki rentang nilai $[1,\infty)$ dengan peringkat $1$ merupakan peringkat tertinggi. Dapat dilihat bahwa dugaan peneliti salah mengenai efektivitas model pada peringkat rendah karena model \lambdamart{} berhasil memperbaiki \ranking{} bahkan untuk posisi lebih dari $80$. Hal tersebut juga dapat ditemukan pada sistem keempat sistem lainnya. Oleh karena itu, peneliti menyimpulkan beberapa faktor yang dapat menyebabkan tidak diperolehnya korelasi positif antara \recall{}$@3$ dan \cutoff{}, antara lain fitur yang kurang dapat menangkap karakteristik pasangan kueri-dokumen yang juga merupakan eksperimen utama penelitian ini, model atau arsitektur yang kurang kompleks, atau terjadinya \textit{overfitting}.
+\begin{figure}[!ht]
+    \centering
+    \includegraphics[scale=0.6]{assets/pdfs/Rank KDE BM25.pdf}
+    \caption{Distribusi peringkat (\textit{rank}) untuk sistem dengan tahap \ranking{} pertama \obm{}. Perhatikan bahwa sumbu-x (\textit{rank}) adalah peringkat yang diperoleh suatu kueri setelah melakukan proses \retrieval{} dan sumbu-y merupakan nilai estimasi kurva distribusi \textit{rank} dengan menggunakan KDE.}
+    \label{grafik:dist rank}
+\end{figure}
 %-----------------------------------------------------------------------------%
 
 
