--- a/src/99-backMatter/lampiran.tex
+++ b/src/99-backMatter/lampiran.tex
@@ -1,7 +1,15 @@
 % %-----------------------------------------------------------------------------%
-% \addappendix{CHANGELOG}
-% \chapter*{Lampiran 1: CHANGELOG}
-% \label{appendix:changelog}
+\begin{landscape}
+\addappendix{Diagram Ekstraksi Fitur}
+\chapter*{Lampiran 1: Diagram Ekstraksi Fitur}
+\label{Lampiran 1: Diagram Ekstraksi Fitur}
+\begin{figure}
+    \centering
+    \includegraphics[scale=0.75]{assets/pdfs/ekstraksiFitur.pdf}
+    \caption{Diagram ekstraksi fitur. Perhatikan bahwa warna ungu menandakan nama variabel yang diimplementasikan pada \bab{}~\ref{bab:4} dengan tambahan informasi dimensi vektor atau jumlah fitur yang diperoleh.}
+    \label{fig:diagramEkstraksiFitur}
+\end{figure}
+\end{landscape}
 % %-----------------------------------------------------------------------------%
 % \todo{Silakan hapus lampiran ini ketika Anda mulai menggunakan \f{template}.}
 
